--- a/TMS/TMS/Areas/Admin/Views/ManageUser/EditAdmin.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/EditAdmin.cshtml
@@ -76,7 +76,7 @@
                 <div class="box-body" style="text-align: center">
                     <span class="lead"><strong>Avatar</strong></span>
                     <br />
-                    <img src="~/Uploads/Avatar/@ViewBag.AvatarURL" class="profile-avatar" alt="Avatar Image" id="avatar-img" />
+                    <img src="@ViewBag.AvatarURL" class="profile-avatar" alt="Avatar Image" id="avatar-img" />
                     <input type="file" id="Avatar" name="Avatar" accept="image/gif, image/jpeg, image/png" onchange="readURL(this);" />
                     @Html.ValidationMessageFor(m => m.Avatar, "", new { @class = "text-danger" })
                 </div>
