--- a/TMS/TMS/Views/Ticket/Create.cshtml
+++ b/TMS/TMS/Views/Ticket/Create.cshtml
@@ -4,27 +4,9 @@
 @model TMS.ViewModels.RequesterTicketViewModel
 
 <style>
-    .title {
-        margin-top: -20px;
-        margin-bottom: 12px;
-    }
-
-    .btitle {
-        display: table;
-    }
-
     h4, h5 {
         color: #345aaa;
         font-weight: bold;
-    }
-
-    .white-title {
-        text-transform: uppercase;
-        font-weight: bold;
-        display: table-cell;
-        padding: 8px;
-        vertical-align: middle;
-        color: #ffffff;
     }
 
     .inputform {
@@ -42,9 +24,9 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="box box-solid bg-blue title">
-            <div class="box-header btitle">
-                <h3 class="white-title">Create ticket</h3>
+        <div class="box box-solid bg-blue big-title">
+            <div class="box-header">
+                <h3>Create ticket</h3>
             </div>
         </div>
         <div class="box box-solid">
