--- a/TMS/TMS/Views/Ticket/Solve.cshtml
+++ b/TMS/TMS/Views/Ticket/Solve.cshtml
@@ -12,28 +12,10 @@
     }
 
 }
-<style>
-    .title {
-        margin-top: -20px;
-        margin-bottom: 12px;
-    }
-
-    .btitle {
-        display: table;
-    }
-
+<style>    
     h4, h5 {
         color: #345aaa;
         font-weight: bold;
-    }
-
-    .white-title {
-        text-transform: uppercase;
-        font-weight: bold;
-        display: table-cell;
-        padding: 8px;
-        vertical-align: middle;
-        color: #ffffff;
     }
 
     .header-content {
@@ -67,9 +49,9 @@
     }
 </style>
 <div class="row col-md-12">
-    <div class="box box-solid bg-blue title">
-        <div class="box-header btitle">
-            <h3 class="white-title">Solve ticket</h3>
+    <div class="box box-solid bg-blue big-title">
+        <div class="box-header">
+            <h3>Solve ticket</h3>
         </div>
     </div>
     <div class="box box-solid">
