--- a/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
@@ -13,10 +13,6 @@
         font-weight: bold;
     }
 
-    .rightItems {
-        text-align: right;
-    }
-
     .ticket-contents {
         padding: 0px;
         margin-bottom: 20px;
@@ -43,9 +39,9 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="box box-solid bg-blue title">
-            <div class="box-header btitle">
-                <h3 class="white-title">TICKET LIST</h3>
+        <div class="box box-solid bg-blue big-title">
+            <div class="box-header">
+                <h3>TICKET LIST</h3>
             </div>
         </div>
         <div class="box box-solid">
