--- a/TMS/TMS/Content/custom-css/tms.css
+++ b/TMS/TMS/Content/custom-css/tms.css
@@ -1,41 +1,37 @@
 ﻿
-.title {
+.big-title {
     margin-top: -20px;
     margin-bottom: 12px;
-}
-
-.btitle {
     display: table;
 }
 
-
-.white-title {
-    text-transform: uppercase;
-    font-weight: bold;
-    display: table-cell;
-    padding: 8px;
-    vertical-align: middle;
-    color: #ffffff;
-}
+    .big-title h3 {
+        text-transform: uppercase;
+        font-weight: bold;
+        display: table-cell;
+        padding: 8px;
+        vertical-align: middle;
+        color: #ffffff;
+    }
 
 .modal {
     text-align: center;
 }
 
 
-@media screen and (min-width: 768px) { 
-  .modal:before {
-    display: inline-block;
-    vertical-align: middle;
-    content: " ";
-    height: 100%;
-  }
+@media screen and (min-width: 768px) {
+    .modal:before {
+        display: inline-block;
+        vertical-align: middle;
+        content: " ";
+        height: 100%;
+    }
 }
 
 .modal-dialog {
-  display: inline-block;
-  text-align: left;
-  vertical-align: middle;
+    display: inline-block;
+    text-align: left;
+    vertical-align: middle;
 }
 
 .modal-title {
