--- a/TMS/TMS/Views/Ticket/Index.cshtml
+++ b/TMS/TMS/Views/Ticket/Index.cshtml
@@ -53,9 +53,9 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="box box-solid bg-blue title">
-            <div class="box-header btitle">
-                <h3 class="white-title">TICKET LIST</h3>
+        <div class="box box-solid bg-blue big-title">
+            <div class="box-header">
+                <h3>TICKET LIST</h3>
             </div>
         </div>
         <div class="box box-solid">
