@Thy: Sua Layout

--- a/TMS/TMS/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -172,10 +172,10 @@
         <div class="content-wrapper">
             <!-- Content Header (Page header) -->
             <section class="content-header">
-                <div class="page-header-custom">
-                    <h2>
-                        @ViewBag.Title
-                    </h2>
+                <div class="box box-solid bg-blue big-title">
+                    <div class="box-header">
+                        <h3>@ViewBag.Title</h3>
+                    </div>
                 </div>
             </section>
             <div id="flash-message" class="alert alert-success" style="display: none">
