--- a/TMS/TMS/Views/Shared/TMSRequesterLayout.cshtml
+++ b/TMS/TMS/Views/Shared/TMSRequesterLayout.cshtml
@@ -166,9 +166,11 @@
         <div class="content-wrapper">
             <!-- Content Header (Page header) -->
             <section class="content-header">
-                <h1>
-                    @ViewBag.Title
-                </h1>
+                <div class="box box-solid bg-blue big-title">
+                    <div class="box-header">
+                        <h3>@ViewBag.Title</h3>
+                    </div>
+                </div>
             </section>
             <!-- Main content -->
             <section class="content">
