--- a/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     Layout = "~/Areas/Technician/Views/Shared/_Layout.cshtml";
 }
+@{ 
+    ViewBag.Title = "Ticket List";
+}
 
 <style>
     .table thead, h4 {
@@ -39,11 +42,6 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="box box-solid bg-blue big-title">
-            <div class="box-header">
-                <h3>TICKET LIST</h3>
-            </div>
-        </div>
         <div class="box box-solid">
             <div class="box-header"></div>
             <div class="box-body">
