--- a/TMS/TMS/Areas/Technician/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/Shared/_Layout.cshtml
@@ -127,15 +127,15 @@
                 </div>
                 <!-- search form -->
                 @*<form action="#" method="get" class="sidebar-form">
-                    <div class="input-group">
-                        <input type="text" name="q" class="form-control" placeholder="Search...">
-                        <span class="input-group-btn">
-                            <button type="submit" name="search" id="search-btn" class="btn btn-flat">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </span>
-                    </div>
-                </form>*@
+                        <div class="input-group">
+                            <input type="text" name="q" class="form-control" placeholder="Search...">
+                            <span class="input-group-btn">
+                                <button type="submit" name="search" id="search-btn" class="btn btn-flat">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </span>
+                        </div>
+                    </form>*@
                 <!-- /.search form -->
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu">
@@ -164,9 +164,11 @@
         <div class="content-wrapper">
             <!-- Content Header (Page header) -->
             <section class="content-header">
-                <h1>
-                    @ViewBag.Title
-                </h1>
+                <div class="box box-solid bg-blue big-title">
+                    <div class="box-header">
+                        <h3>@ViewBag.Title</h3>
+                    </div>
+                </div>
             </section>
             <!-- Main content -->
             <section class="content clearfix">
