--- a/TMS/TMS/Views/Ticket/Index.cshtml
+++ b/TMS/TMS/Views/Ticket/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
     Layout = "~/Views/Shared/TMSRequesterLayout.cshtml";
 }
+@{ 
+    ViewBag.Title = "Ticket List";
+}
 <style>
     h5 {
         color: #171fb0;
@@ -53,11 +56,6 @@
 
 <div class="row">
     <div class="col-xs-12">
-        <div class="box box-solid bg-blue big-title">
-            <div class="box-header">
-                <h3>TICKET LIST</h3>
-            </div>
-        </div>
         <div class="box box-solid">
             <div class="box-body">
                 <a class="btn btn-primary btn-flat" href="@(Url.Action("Create", "Ticket"))">Create new ticket</a>
