--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
@@ -25,7 +25,7 @@
                                 <label class="control-label col-md-3">Type</label>
                                 <div class="col-md-9">
                                     <select class="form-control" name="Type">
-                                        <option value="0">None</option>
+                                        <option value>None</option>
                                         <option value="1">Request</option>
                                         <option value="2">Problem</option>
                                         <option value="3">Change</option>
@@ -117,6 +117,7 @@
                             <div class="form-group">
                                 <label class="control-label col-md-3"></label>
                                 <div class="col-md-9">
+                                    <input class="form-control" type="file" id="solutionFiles" name="solutionFiles" multiple>
                                     @*<div class="btn btn-default btn-file">
                                             <i class="fa fa-paperclip"></i> Attachment
                                             <input type="file" name="file" multiple>
